[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Choose_music.gd" type="Script" id=1]

[node name="Choose_music" type="Node"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 96.0
margin_top = 40.0
margin_right = 154.0
margin_bottom = 60.0
text = "Music1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 96.0
margin_top = 80.0
margin_right = 154.0
margin_bottom = 100.0
text = "Music2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 96.0
margin_top = 120.0
margin_right = 154.0
margin_bottom = 140.0
text = "Music3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 96.0
margin_top = 160.0
margin_right = 154.0
margin_bottom = 180.0
text = "Music4"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
